Fix missing sass accredited filter

--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -83,7 +83,7 @@
                 <div><input id="filter-validation-non-validated" name="filter-validation" type="checkbox"
                             value="non validated"> <label class="checkbox-label" for="filter-validation-non-validated">Non validated</label>
                 </div>
-                {% if is_sass_enabled %}
+                {% if preferences.SiteSetting.enable_sass %}
                     <div>
                         <input id="filter-validation-sass-acredited" name="filter-validation" type="checkbox"
                             value="sass accredited">
