--- a/bims/templates/source_reference_list.html
+++ b/bims/templates/source_reference_list.html
@@ -113,6 +113,7 @@
                                 <div class="col-12">
                                     <p class="reference-type-label">{{ source_reference.reference_type }}</p>
                                     <h5 class="card-title">{{ source_reference.link_template | safe }}</h5>
+                                    <p style="color: #8a8a8a;font-size: 0.9em;"> Source : {{ source_reference.reference_source }}</p>
                                     <p class="card-text"><i class="fa fa-calendar"
                                                             aria-hidden="true"></i> {{ source_reference.year }} <span class="vertical-separator"></span>  <i class="fa fa-users"
                                                             aria-hidden="true"></i> {{ source_reference.authors }}
