--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -71,7 +71,7 @@
         <% if (is_sass_enabled) { %>
             <div class="row" style="padding: 10px;">
                 <div class="col-sm-<% if (!add_data) { %>12<%  } else { %>6<% } %>" style="padding-right: 0">
-                    <button class="fbis-button-small <% if (sass_exist) { %> sp-sass-dashboard <% } else { %> disabled <% } %>" style="width: 100%; height: 30px">ss Dashboard</button>
+                    <button class="fbis-button-small <% if (sass_exist) { %> sp-sass-dashboard <% } else { %> disabled <% } %>" style="width: 100%; height: 30px">SASS Dashboard</button>
                 </div>
                 <div class="col-sm-6" style="padding-left: 0;<% if (!add_data) { %> display:none <% } %>">
                     <button class="fbis-button-small fbis-red sp-add-sass" style="width: 100%; height: 30px">Add SASS</button>
