--- a/bims/templates/edit_source_reference.html
+++ b/bims/templates/edit_source_reference.html
@@ -81,7 +81,7 @@
                 <div class="form-group row">
                     <label for="year" class="col-sm-2 col-form-label">Year</label>
                     <div class="col-sm-10">
-                        <input type="number" name="year" id="year" class="form-control" value="{{ year }}"/>
+                        <input type="number" name="year" id="year" class="form-control" value="{{ object.year }}"/>
                     </div>
                 </div>
                 <div class="form-group row">
