--- a/bims/templates/source_reference_list.html
+++ b/bims/templates/source_reference_list.html
@@ -113,6 +113,7 @@
                                 <div class="col-12">
                                     <p class="reference-type-label">{{ source_reference.reference_type }}</p>
                                     <h5 class="card-title">{{ source_reference.link_template | safe }}</h5>
+                                    <p style="color: #8a8a8a;font-size: 0.9em;"> Source : {{ source_reference.reference_source }}</p>
                                     <p class="card-text"><i class="fa fa-calendar"
                                                             aria-hidden="true"></i> {{ source_reference.year }} <span class="vertical-separator"></span>  <i class="fa fa-users"
                                                             aria-hidden="true"></i> {{ source_reference.authors }}
@@ -121,7 +122,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <p class="card-text">
+                            <div class="card-text">
                                 {% if source_reference.occurrences > 0 %}
                                     <a href='/map/#search//taxon=&search=&reference=["{{ source_reference.id }}"]'><span
                                             class="badge badge-info badge-occurrences">{{ source_reference.occurrences }} records</span>
@@ -129,7 +130,12 @@
                                 {% else %}
                                     <span class="badge badge-info badge-occurrences badge-zero">{{ source_reference.occurrences }} records</span>
                                 {% endif %}
-                            </p>
+                                {% if perms.bims.change_sourcereference %}
+                                    <div class="float-right">
+                                        <a href="/edit-source-reference/{{ source_reference.id }}/?next={{ request.get_full_path | urlencode }}" class="badge badge-primary badge-occurrences">Update</a>
+                                    </div>
+                                {% endif %}
+                            </div>
                         </div>
                     </div>
                 {% endfor %}
