--- a/bims/templates/edit_source_reference.html
+++ b/bims/templates/edit_source_reference.html
@@ -52,6 +52,14 @@
                         <textarea name="title" id="title" class="form-control">{% if object.is_unpublished %}{{ object.note }}{% else %}{{ object.title }}{% endif %}</textarea>
                     </div>
                 </div>
+                {% if object.is_unpublished or object.is_database %}
+                    <div class="form-group row">
+                        <label for="title" class="col-sm-2 col-form-label">Source Name</label>
+                        <div class="col-sm-10">
+                            <textarea name="source_name" id="source_name" class="form-control">{{ object.source_name }}</textarea>
+                        </div>
+                    </div>
+                {% endif %}
                 {% if object.is_bibliography %}
                     <div class="form-group row">
                         <label for="doi" class="col-sm-2 col-form-label">DOI</label>
