--- a/bims/templates/non_validated_user_list.html
+++ b/bims/templates/non_validated_user_list.html
@@ -69,7 +69,7 @@
     <div class="col-lg-12">
     <table class="table table-striped">
         <tr>
-            <th>FBIS Site Code</th>
+            <th>Site Code</th>
             <th>Original Species Name</th>
             <th>Origin</th>
             <th>Collection Date</th>
