Show origin and endemism in taxon management

--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -207,9 +207,11 @@
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th scope="col" style="width: 30%">Taxon Name</th>
-                    <th scope="col" style="width: 20%">Rank</th>
-                    <th scope="col" style="width: 25%">Import date</th>
+                    <th scope="col" style="width: 25%">Taxon Name</th>
+                    <th scope="col" style="width: 10%">Rank</th>
+                    <th scope="col" style="width: 20%">Origin</th>
+                    <th scope="col" style="width: 20%">Endemism</th>
+                    <th scope="col" style="width: 10%">Import date</th>
                     <th scope="col">Action</th>
                 </tr>
                 </thead>
@@ -237,9 +239,9 @@
 
     <div class="row-action" style="display: none">
         <td>
-            <button class="btn btn-action btn-danger remove-taxon-from-group">Remove from group
+            <button class="btn btn-action btn-danger remove-taxon-from-group" style="width: 100%">Remove from group
             </button>
-            <a href="" class="btn btn-action btn-warning edit-taxon" onclick="windowpop(this.href, 800, 600)">Edit
+            <a href="" class="btn btn-action btn-warning edit-taxon" style="width: 100%; margin-top: 5px" onclick="windowpop(this.href, 800, 600)">Edit
             </a>
         </td>
     </div>
