Add cons status

--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -222,6 +222,11 @@
                         <i class="fa fa-arrow-up sort-button" aria-hidden="true" data-order="rank"></i>
                         <i class="fa fa-arrow-down sort-button" aria-hidden="true" data-order="-rank"></i>
                     </th>
+                    <th scope="col" style="width: 10%">Cons. Status
+                        <br/>
+                        <i class="fa fa-arrow-up sort-button" aria-hidden="true" data-order="iucn_status__category"></i>
+                        <i class="fa fa-arrow-down sort-button" aria-hidden="true" data-order="-iucn_status__category"></i>
+                    </th>
                     <th scope="col" style="width: 20%">Origin
                         <i class="fa fa-arrow-up sort-button" aria-hidden="true" data-order="origin"></i>
                         <i class="fa fa-arrow-down sort-button" aria-hidden="true" data-order="-origin"></i>
